# Research-Assistant

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: mock_companies.py
examples/: conversation_runs.py  memory_demo.py  run_1.txt  run_2.txt
scripts/: cli.py
src/: __init__.py  config.py  deps.py  logging_config.py  observability.py  server.py  sse_bus.py
src/adapters/: __init__.py  _mock_helpers.py  tavily.py
src/graph/: __init__.py  builder.py  prompts.py  routing.py  state.py  tools.py
src/graph/nodes/: __init__.py  _audit_helpers.py  clarity_agent.py  interrupt_node.py  memory_writer.py  research_agent.py  synthesis_agent.py  validator_agent.py
src/llm/: __init__.py  client.py  embeddings.py
src/memory/: __init__.py  longterm.py
src/neo4j_client/: __init__.py  audit.py  driver.py  schema.py
src/retrieval/: __init__.py  query_rewriting.py  rerank.py
src/routes/: __init__.py  health.py  runs.py
streamlit_app/: __init__.py  app.py  components.py  graph_runner.py  state.py
streamlit_app/pages/: __init__.py  chat_tab.py  memory_tab.py
streamlit_app/tabs/: __init__.py  architecture_tab.py  chat_tab.py  eval_tab.py  retrieval_tab.py  settings_tab.py  trace_tab.py
tests/: conftest.py  test_eval_metrics.py  test_graph_compile.py  test_memory.py  test_mock_data.py  test_retrieval.py  test_routing.py  test_smoke.py  test_state.py  test_tavily.py
tests/eval/: __init__.py  golden_dataset.py  last_run.json  metrics.py  run_eval.py  trajectory_eval.py
