[project]
name = "research-assistant"
version = "0.1.0"
description = "Multi-agent LangGraph research assistant — Gemini + Tavily + sqlite-vec"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "google-api-core>=2.20.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "tenacity>=9.0",
    "python-json-logger>=2.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "numpy>=2.0",
    "tavily-python>=0.5.0",
    "flashrank>=0.2.10",
    "sqlite-vec>=0.1.6",
    "streamlit>=1.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-python-jose",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET", "ARG", "PTH", "ASYNC", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# FastAPI's Depends() in default args is the documented idiom — not a B008 bug.
"src/routes/*.py" = ["B008"]
# FastAPI exception_handler signature requires both `request` and `exc` even when one is unused.
"src/server.py" = ["ARG001"]
# LangGraph node signature requires `config: RunnableConfig` even when unused.
"src/graph/nodes/*.py" = ["ARG001"]
# Streamlit demo app legitimately calls loop.run_until_complete inside sync handlers.
"streamlit_app/**/*.py" = ["ASYNC250", "ASYNC240"]
# Interactive CLI legitimately calls input() inside an async main loop.
"scripts/cli.py" = ["ASYNC250"]
# One-off file operations in demo scripts (wipe checkpoint, write transcript).
"examples/*.py" = ["ASYNC240", "B007"]
# Eval orchestrator writes a single JSON snapshot at end of run — not a hot path.
"tests/eval/run_eval.py" = ["ASYNC240"]
# Test stubs need to match callee signatures even when params go unused.
"tests/*.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langchain_google_genai.*",
    "google.api_core.*",
    "tavily.*",
    "flashrank.*",
    "sqlite_vec.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit live external services (LLM, Tavily, etc.)",
]
